[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://square.jpeg" type="Texture" id=2]
[ext_resource path="res://light.png" type="Texture" id=3]
[ext_resource path="res://Wav/Back_tones/style2/back_style_2_001.wav" type="AudioStream" id=4]
[ext_resource path="res://Wav/Confirm_tones/style6/confirm_style_6_003.wav" type="AudioStream" id=5]
[ext_resource path="res://shards.png" type="Texture" id=6]
[ext_resource path="res://transition.shader" type="Shader" id=7]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 7 )
shader_param/cutoff = 1.0
shader_param/smooth_size = 0.303
shader_param/mask = ExtResource( 6 )

[sub_resource type="Animation" id=2]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/cutoff")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/cutoff")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 22.6627, 22.0053 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 23.6494, 23.1633 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 40, 248 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Fade" type="ColorRect" parent="."]
visible = false
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -299.51
margin_right = 512.0
margin_bottom = 300.49
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fade"]
anims/fade_in = SubResource( 2 )
anims/fade_out = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
show_behind_parent = true
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0.85098, 0.2, 1 )
show_behind_parent = true
scale = Vector2( 0.202181, 0.196429 )
texture = ExtResource( 2 )

[node name="HitBox" type="Area2D" parent="."]
show_behind_parent = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
show_behind_parent = true
shape = SubResource( 5 )

[node name="Resseter" type="Area2D" parent="."]
show_behind_parent = true
position = Vector2( -207.655, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Resseter"]
show_behind_parent = true
position = Vector2( -650, 0 )
shape = SubResource( 6 )

[node name="Light2D" type="Light2D" parent="."]
show_behind_parent = true
position = Vector2( 31.9524, 12.3302 )
texture = ExtResource( 3 )
shadow_enabled = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Score_10" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_entered" from="Resseter" to="." method="_on_Resseter_body_entered"]
